Feat (frontend-pages) 'PP-007': Add Register component with basic structure and unit test, update styles and routing adjustments.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/app.css
+++ b/frontend/web/src/app/app.css
@@ -60,11 +60,12 @@ p {
 
 main {
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 1rem;
   box-sizing: inherit;
   position: relative;
+  background: red;
 }
