Feat (frontend-pages) 'PP-007': Refactor Auth and Login pages; improve layout structure with Tailwind CSS, update templates, and refine AuthHeader component.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<section class="flex flex-row min-h-screen" id="login">
+
+  <div id="branding">
+    <div id="background">
+    </div>
+
+    <div id="content">
+      <p>Content</p>
+    </div>
+  </div>
+
+  <div id="form">
+    <p>Form Here</p>
+  </div>
+
+</section>
