Feat (frontend-layouts) 'PP-007': Add AuthFeature component, update login page to display dynamic features, and enhance layout with Tailwind CSS improvements.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.css
+++ b/frontend/web/src/app/pages/auth/login/login.css
@@ -20,7 +20,7 @@
   }
 
   #content {
-    @apply absolute inset-0 z-1 h-screen;
+    @apply absolute inset-0 z-1 h-screen p-12 flex flex-col items-start justify-between;
   }
 }
 
