--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -12,7 +12,7 @@
 
         <p>Take control of your finances with intuitive tracking, instant insights, and easy-to-manage accounts.</p>
 
-        <ul>
+        <ul class="flex flex-col gap-2">
           @for (feature of features; track feature.id) {
             <auth-feature [feature]="feature.name"></auth-feature>
           }
