--- a/frontend/web/src/app/components/layouts/auth/auth-feature/auth-feature.html
+++ b/frontend/web/src/app/components/layouts/auth/auth-feature/auth-feature.html
@@ -1,7 +1,7 @@
-<div class="flex flex-row items-center gap-2">
+<div class="flex flex-row items-center gap-3">
 
-  <div class="size-4 rounded-full bg-red-300/50 grid place-items-center">
-    <div class="size-1/2 rounded-full bg-red-600/60 opacity-80"></div>
+  <div class="size-4 rounded-full bg-red-300/25 grid place-items-center">
+    <div class="size-1/2 rounded-full bg-red-600 opacity-80"></div>
   </div>
 
   <p>{{ feature() }}</p>
