Feat (login-frontend) 'PP-007': Implement new login form UI with two-factor authentication card and refine global typography and color variables.

--- a/frontend/web/src/app/components/layouts/auth/auth-feature/auth-feature.html
+++ b/frontend/web/src/app/components/layouts/auth/auth-feature/auth-feature.html
@@ -4,6 +4,6 @@
     <div class="size-1/2 rounded-full bg-red-600 opacity-80"></div>
   </div>
 
-  <p>{{ feature() }}</p>
+  <p class="text-white">{{ feature() }}</p>
 
 </div>
