--- a/frontend/web/src/app/pages/auth/login/login.css
+++ b/frontend/web/src/app/pages/auth/login/login.css
@@ -9,11 +9,11 @@
   filter: blur(10px);
   position: absolute;
   transform: scale(1.05);
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.925);
 }
 
 #branding {
-  @apply relative overflow-hidden flex-1 hidden md:block;
+  @apply relative overflow-hidden flex-1 hidden md:block pointer-events-none text-white;
 
   #background {
     @apply absolute inset-0 z-[-2] w-full h-full bg-[url('/images/background.jpg')] bg-cover bg-center;
@@ -26,4 +26,12 @@
 
 #form {
   @apply flex-1 grid place-items-center;
+
+  hr {
+    @apply flex-1 border-(--color-gray2);
+  }
+
+  .two-factor-card {
+    @apply text-xs flex flex-row gap-4 border border-(--color-gray2) rounded-lg p-6 w-full;
+  }
 }
