--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -38,10 +38,10 @@
       </div>
 
       <div class="two-factor-card">
-        <div></div>
+        <icon-warning [size]="18" />
 
         <div class="space-y-2">
-          <p>Protected by two-factor authentication</p>
+          <p>Protected by two-factor authentication!</p>
           <p class="text-muted-text">
             Your account security is our priority. You may be asked to verify your identity.
           </p>
