Feat (frontend-config) 'PP-007': Extract branding section to standalone component and integrate into login page.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -1,28 +1,6 @@
 <section class="flex flex-row min-h-screen" id="login">
-  <div id="branding">
-    <div id="background"></div>
 
-    <div id="content">
-      <img alt="app-logo" height="50" ngSrc="/images/branding/logo.png" width="50"/>
-
-      <div class="flex flex-col gap-8 text-balance">
-        <h1>Pocket Pilot</h1>
-
-        <p>
-          Take control of your finances with intuitive tracking, instant insights, and
-          easy-to-manage accounts.
-        </p>
-
-        <ul class="flex flex-col gap-2">
-          @for (feature of features; track feature.id) {
-            <auth-feature [feature]="feature.name"></auth-feature>
-          }
-        </ul>
-      </div>
-
-      <p class="text-muted-text text-sm">Copyright &copy; {{ year() }}. All Rights Reserved.</p>
-    </div>
-  </div>
+  <auth-branding class="flex-1" />
 
   <div id="form">
     <div class="form-wrapper">
