Feat (frontend-config) 'PP-007': Add registration link to login page and enhance navigation logic
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -45,6 +45,8 @@
       </form>
       <!--   FORM END   -->
 
+      <p class="to-register-text text-muted hover:text-primary">Don't have an account? <a href="/register">Sign Up</a></p>
+
       <div class="flex flex-row items-center gap-6 w-full text-sm my-10">
         <hr class="border-muted"/>
         <p class="text-muted capitalize">Secure Login</p>
