--- a/frontend/web/src/app/pages/auth/login/login.css
+++ b/frontend/web/src/app/pages/auth/login/login.css
@@ -31,6 +31,10 @@
     }
   }
 
+  .to-register-text {
+    @apply mt-2 text-sm text-center w-full underline underline-offset-2 cursor-pointer duration-300 ease-in-out
+  }
+
   hr {
     @apply flex-1;
   }
