--- a/frontend/web/src/app/pages/auth/register/register.html
+++ b/frontend/web/src/app/pages/auth/register/register.html
@@ -1,1 +1,72 @@
-<p>register works!</p>
+<section class="flex flex-row min-h-screen" id="register">
+
+  <div id="form">
+    <div class="form-wrapper">
+      <div class="space-y-4">
+        <h3>Hello there,</h3>
+        <p>Create a new account to continue</p>
+      </div>
+
+      <!--   FORM START   -->
+      <form id="login-form">
+
+        <div class="input-field">
+          <label for="email">Email</label>
+          <input [formField]="registerForm.email" class="bg-alternate-background focus:outline-primary" id="email" placeholder="Email Address" type="email" />
+
+          @if (registerForm.email().invalid() && registerForm.email().touched()){
+            <div class="input-field-errors-wrapper">
+              @for (error of registerForm.email().errors(); track error.kind) {
+                <p class="input-field-error">{{ error.message }}</p>
+              }
+            </div>
+          }
+        </div>
+
+        <div class="input-field">
+          <label for="username">Username</label>
+          <input [formField]="registerForm.username" class="bg-alternate-background focus:outline-primary" id="username" placeholder="Username" type="text" />
+
+          @if (registerForm.username().invalid() && registerForm.username().touched()){
+            <div class="input-field-errors-wrapper">
+              @for (error of registerForm.username().errors(); track error.kind) {
+                <p class="input-field-error">{{ error.message }}</p>
+              }
+            </div>
+          }
+        </div>
+
+        <div class="input-field">
+          <label for="password">Password</label>
+          <input [formField]="registerForm.password" class="bg-alternate-background focus:outline-primary" id="password" placeholder="Password" type="password" />
+
+          @if (registerForm.password().invalid() && registerForm.password().touched()){
+            <div class="input-field-errors-wrapper">
+              @for (error of registerForm.password().errors(); track error.kind) {
+                <p class="input-field-error">{{ error.message }}</p>
+              }
+            </div>
+          }
+        </div>
+
+        <button [disabled]="registerForm().invalid()" class="bg-primary text-inverted-text shadow-primary disabled:bg-primary/50" type="submit">
+          Register
+        </button>
+
+      </form>
+      <!--   FORM END   -->
+
+      <p (click)="routeToLogin()" class="to-register-text text-muted hover:text-primary">Already have an account? Log in</p>
+
+      <div class="flex flex-row items-center gap-6 w-full text-sm my-10">
+        <hr class="border-muted"/>
+        <p class="text-muted capitalize">Secure Registration</p>
+        <hr class="border-muted"/>
+      </div>
+
+    </div>
+  </div>
+
+  <auth-branding class="flex-1" />
+
+</section>
