Feat (frontend-config) 'PP-007': Add alignment customizations for branding and feature components with updated binding and styling
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/components/layouts/auth/auth-branding/branding.css
+++ b/frontend/web/src/app/components/layouts/auth/auth-branding/branding.css
@@ -20,6 +20,6 @@
   }
 
   #content {
-    @apply absolute inset-0 z-1 h-screen p-12 flex flex-col items-start justify-between;
+    @apply absolute inset-0 z-1 h-screen p-12 flex flex-col justify-between;
   }
 }
